<resources>
    <string name="app_name">MyBooks</string>
    <string name="home">Home</string>
    <string name="main_quote">\"If you don’t like to read, you haven’t found the right book.\" – J.K. Rowling</string>
    <string name="all_books">All Books</string>
    <string name="wish_list">Wish List</string>
    <string name="favorites">Favorites</string>
    <string name="book">Book</string>
    <string name="status">Status:</string>
    <string name="book_title">Book title:</string>
    <string name="author">Author:</string>
    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>
    <string name="rating">Rating:</string>
    <string name="fav_character">Fav. Character:</string>
    <string name="cost">Cost:</string>
    <string name="favorite_quote">Favorite quote:</string>
    <string name="quotes">Quotes</string>
    <string name="delete">Delete</string>
    <string name="add_new_book">Add new book</string>
    <string name="add_quote">Add quote</string>
    <string name="enter_book_title">Enter book title</string>
    <string name="enter_book_author">Enter book author</string>
    <string name="choose_book_status">Choose book status</string>
    <string name="choose_end_date">Choose end date</string>
    <string name="choose_start_date">Choose start date</string>
    <string name="enter_book_rating">Enter book rating</string>
    <string name="enter_cost">Enter book cost</string>
    <string name="enter_fav_character">Enter fav. character</string>
    <string name="add_button">Add</string>
    <string name="edit_button">Edit</string>
    <string name="enter_quote">Enter quote</string>
    <string-array name="book_status">
        <item>New</item>
        <item>Reading</item>
        <item>Finished</item>
        <item>Wish list</item>
        <item>Dropped</item>
    </string-array>
</resources>