<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/ibCloseBookDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/close"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiTitle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibCloseBookDialog">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jost"
            android:hint="@string/enter_book_title"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiAuthor"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jost"
            android:hint="@string/enter_book_author"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/llStatusInput"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiAuthor">

        <TextView
            android:id="@+id/tvStatusInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/jost"
            android:text="@string/choose_book_status"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic" />

        <Spinner
            android:id="@+id/spStatus"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/black"
            android:dropDownWidth="wrap_content"
            android:entries="@array/book_status"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llStartDate"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llStatusInput">

        <TextView
            android:id="@+id/tvStartDateInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/jost"
            android:text="@string/choose_start_date"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic" />

        <ImageButton
            android:id="@+id/ibStartDate"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/calendar_icon"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llEndDate"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llStartDate">

        <TextView
            android:id="@+id/tvEndDateInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/jost"
            android:text="@string/choose_end_date"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic" />

        <ImageButton
            android:id="@+id/ibEndDate"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/calendar_icon"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiRating"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llEndDate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jost"
            android:hint="@string/enter_book_rating"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiFavChar"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiRating">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietFavChar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jost"
            android:hint="@string/enter_fav_character"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiCost"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiFavChar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jost"
            android:hint="@string/enter_cost"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAddEditBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/dark_grayish_blue"
        android:fontFamily="@font/jost"
        android:text="@string/add_button"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiCost"
        app:strokeColor="@color/transparent_black"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>